--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "minimum-stability": "stable",
     "require": {
         "namelesscoder/typo3-repository-client": "^2.0",
-        "symfony/yaml": "^3.2"
+        "symfony/yaml": "^3.2",
+        "php": "^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "@stable"
